* Adjust sysfs capacity on Intel CPUs on Linux 6.16+ together with
  max frequencies when they differ because of Turbo Boost Max 3.0.
* Disable Linux cpukinds on AMD before Zen5 since these CPUs are
  homogeneous and it may cause slowness on some platforms.
  The new env var HWLOC_LINUX_CPUKINDS=1 may be used to reenable it.
  Thanks to Benedikt Steinbusch and Jan André Reuter for the report.
* Send the lstopo ASCII output to a pager (less by default).
* Plugins are now supported for OpenCL, CUDA and XML components
  on Windows using the HWLOC_ENABLE_PLUGINS CMake option,
  thanks to Julian Hornich.
  + HWLOC_BUILD_SHARED_LIBS is removed in favor of BUILD_SHARED_LIBS.
* The FAQ "How do I find the local MCDRAM NUMA node on Intel Xeon Phi
  processor?" is replaced with "How do I find the local HBM NUMA node
  on heterogeneous memory systems?"
* Drop support for Windows before 7 or Server 2008 R2.
* hwloc-patch now has a --dry-run option.
* Remove the HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
  superseded with a single HWLOC_PCI_LOCALITY since 2.0.


Version 2.12.2
--------------
* Fix hwloc-gather-topology failure because of MemoryModules when
  running as root. Thanks to Andrew Phelps for the report.
* Fix HWLOC_LOCAL_NUMANODE_FLAG_INTERSECT_LOCALITY for empty input
  cpuset, thanks to Hadrien Grasland.
* Fix hwloc_distances_get_by_name() for distances with no kinds.
  Thanks to Hadrien Grasland.
* Initialize distances grouping configuration for duplicated topology.
  Thanks to Hadrien Grasland.
* Improve Windows CMake build to support ARM64, thanks to Chiwen Hui.


Version 2.12.1
--------------
* Add hwloc-calc's --default-nodes option to hwloc-bind and hwloc-info.
* Improve the --best-memattr "default" fallback, try to use "default"
  memory nodes, and add verbose messages and warnings if some
  performance info are incomplete or missing.
  Thanks to Antoine Morvan for the report.
* Fix CPU and memory binding on different locations,