@@ -1,6 +1,6 @@
 /*
  * SPDX-License-Identifier: BSD-3-Clause
- * Copyright © 2010-2025 Inria.  All rights reserved.
+ * Copyright © 2010-2026 Inria.  All rights reserved.
  * Copyright © 2010-2013 Université Bordeaux
  * Copyright © 2010-2011 Cisco Systems, Inc.  All rights reserved.
  * See COPYING in top-level directory.
@@ -1422,20 +1422,46 @@ look_procs(struct hwloc_backend *backend, struct procinfo *infos, unsigned long 
       /* use hybrid info for cpukinds */
       if (cpuid_type == intel) {
         /* Hybrid Intel */
+        hwloc_bitmap_t lpset = hwloc_bitmap_alloc();
         hwloc_bitmap_t atomset = hwloc_bitmap_alloc();
         hwloc_bitmap_t coreset = hwloc_bitmap_alloc();
+        unsigned max_cache_levels = 0;
+        int efficiency;
         for(i=0; i<nbprocs; i++) {
-          if (infos[i].hybridcoretype == 0x20)
-            hwloc_bitmap_set(atomset, i);
-          else if (infos[i].hybridcoretype == 0x40)
+          if (infos[i].numcaches > max_cache_levels)
+            max_cache_levels = infos[i].numcaches;
+        }
+        for(i=0; i<nbprocs; i++) {
+          if (infos[i].hybridcoretype == 0x20) {
+            /* On Family 6 hybrids, Atom cores without an L3 cache are low-power cores */
+            if (infos[i].cpufamilynumber == 6 && infos[i].numcaches < max_cache_levels)
+              hwloc_bitmap_set(lpset, i);
+            else
+              hwloc_bitmap_set(atomset, i);
+          } else if (infos[i].hybridcoretype == 0x40) {
             hwloc_bitmap_set(coreset, i);
+          }
+        }
+        /* Lower values indicate less efficient cores. This counter is incremented each time a new
+         * CPU kind is registered, so registration must be done in least-to-most efficient order.
+         */
+        efficiency = 0;
+        /* register IntelLowPower set if any */
+        if (!hwloc_bitmap_iszero(lpset)) {
+          struct hwloc_info_s infoattr;
+          infoattr.name = (char *) "CoreType";
+          infoattr.value = (char *) "IntelLowPower";
+          hwloc_internal_cpukinds_register(topology, lpset, efficiency++, &infoattr, 1, HWLOC_CPUKINDS_REGISTER_FLAG_OVERWRITE_FORCED_EFFICIENCY);
+          /* the cpuset is given to the callee */
+        } else {
+          hwloc_bitmap_free(lpset);
         }
         /* register IntelAtom set if any */
         if (!hwloc_bitmap_iszero(atomset)) {
           struct hwloc_info_s infoattr;
           infoattr.name = (char *) "CoreType";
           infoattr.value = (char *) "IntelAtom";
-          hwloc_internal_cpukinds_register(topology, atomset, HWLOC_CPUKIND_EFFICIENCY_UNKNOWN, &infoattr, 1, 0);
+          hwloc_internal_cpukinds_register(topology, atomset, efficiency++, &infoattr, 1, HWLOC_CPUKINDS_REGISTER_FLAG_OVERWRITE_FORCED_EFFICIENCY);
           /* the cpuset is given to the callee */
         } else {
           hwloc_bitmap_free(atomset);
@@ -1445,7 +1471,7 @@ look_procs(struct hwloc_backend *backend, struct procinfo *infos, unsigned long 
           struct hwloc_info_s infoattr;
           infoattr.name = (char *) "CoreType";
           infoattr.value = (char *) "IntelCore";
-          hwloc_internal_cpukinds_register(topology, coreset, HWLOC_CPUKIND_EFFICIENCY_UNKNOWN, &infoattr, 1, 0);
+          hwloc_internal_cpukinds_register(topology, coreset, efficiency++, &infoattr, 1, HWLOC_CPUKINDS_REGISTER_FLAG_OVERWRITE_FORCED_EFFICIENCY);
           /* the cpuset is given to the callee */
         } else {
           hwloc_bitmap_free(coreset);
